# fun_club

./: .gitignore  About.cpp  About.h  CMakeLists.txt  Home.cpp  Home.h  README.md  T_BasePage.cpp  UserEnroll.cpp  UserEnroll.h  UserLogin.cpp  main.cpp  mainwindow.cpp  mainwindow.h
Doc/: ErrorLog.md
Manager/: DataBaseManager.cpp  DataBaseManager.h  Result.h  UserEnroll.cpp  UserEnroll.h  UserLogin.cpp  UserLogin.h  audio_to_json.py  spotifyapi.cpp  spotifyapi.h
Resource/: FunClub.qrc
Widget/: About.cpp  About.h  Anime.cpp  Anime.h  Comic.cpp  Comic.h  Game.cpp  Game.h  Home.cpp  Home.h  Music.cpp  Music.h  Setting.cpp  Setting.h  T_BasePage.cpp  T_BasePage.h  UserEnroll.cpp  UserEnroll.h  UserLogin.cpp  UserLogin.h
include/: ElaWidgetTools.qrc
